--- a/src/app/user-view/user-view.component.html
+++ b/src/app/user-view/user-view.component.html
@@ -1,1 +1,7 @@
-<p>user-view works!</p>
+<div *ngIf="user">
+  <h1>{{user.first_name}} {{user.last_name}}</h1>
+  <div><strong>Username:</strong> {{user.username}}</div>
+  <div><strong>Email:</strong> {{user.email}}</div>
+  <button>Edit</button>
+  <button>Delete</button>
+</div>
