Created schema, service, and CRUD to articles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
+<nav>
+  <button [routerLink]="['/users']">Users</button>
+  <button [routerLink]="['/users/create']">New User</button>
+  <button [routerLink]="['/articles']">Articles</button>
+  <button>New Article</button>
+</nav>
+
 <router-outlet></router-outlet>
