--- a/src/app/user-view/user-view.component.html
+++ b/src/app/user-view/user-view.component.html
@@ -3,5 +3,6 @@
   <div><strong>Username:</strong> {{user.username}}</div>
   <div><strong>Email:</strong> {{user.email}}</div>
   <button>Edit</button>
-  <button>Delete</button>
+  <button [routerLink]="['/users/edit/', user._id]">Edit</button>
+  <button (click)="deleteUser(user._id)">Delete</button>
 </div>
