Generate login, logout, and register components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <button [routerLink]="['/users']">Users</button>
   <button [routerLink]="['/users/create']">New User</button>
   <button [routerLink]="['/articles']">Articles</button>
-  <button>New Article</button>
+  <button [routerLink]="['/articles/create']">New Article</button>
 </nav>
 
 <router-outlet></router-outlet>
