UserService and User schema added

--- a/src/app/article-create/article-create.component.html
+++ b/src/app/article-create/article-create.component.html
@@ -5,15 +5,20 @@
   <div *ngIf="errorMessage">{{errorMessage}}</div>
 
   <div>
-    <label for="title">title</label>
+    <label for="title">Title</label>
     <input [(ngModel)]="article.title" type="text" name="title" id="title">
     <div *ngIf="errors.title">{{errors.title.message}}</div>
   </div>
 
   <div>
+    <label for="slug">Slug</label>
+    <input [(ngModel)]="article.slug" type="text" name="slug" id="slug">
+    <div *ngIf="errors.slug">{{errors.slug.message}}</div>
+  </div>
+
+  <div>
     <label for="description">Description</label>
-    <input [(ngModel)]="article.description" type="text" name="description" id="description">
-    <div *ngIf="errors.description">{{errors.description.message}}</div>
+    <input [(ngModel)]="article.description" type="text" name="description" name="description" id="description">
   </div>
 
   <div>
@@ -25,6 +30,21 @@
     <label for="body">Body</label>
     <input [(ngModel)]="article.body" type="text" name="body" id="body">
   </div>
+
+<div>
+  <label for="published">Published</label>
+  <input [(ngModel)]="article.published" type="text" name="published" id="published">
+</div>
+
+<div>
+  <label for="created">Created</label>
+  <input [(ngModel)]="article.created" type="text" name="created" id="created">
+</div>
+
+<div>
+  <label for="modified">Modified</label>
+  <input [(ngModel)]="article.modified" type="text" name="modified" id="modified">
+</div>
 
   <button type="submit">Submit</button>
 
