--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
   <button [routerLink]="['/users/create']">New User</button>
   <button [routerLink]="['/articles']">Articles</button>
   <button [routerLink]="['/articles/create']">New Article</button>
+  <button [routerLink]="['/login']">Login</button>
+  <button [routerLink]="['/logout']">Logout</button>
 </nav>
 
 <router-outlet></router-outlet>
